--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="about-col-1">
 
-          <img src="images/shared image.jpg" alt="About Me">
+          <img src="shared image.jpg" alt="About Me">
 
         </div>
 
@@ -196,7 +196,7 @@
 
         <div class="work">
 
-          <img src="images/DABS.jpg" alt="Doctor Appointment Booking System">
+          <img src="DABS.jpg" alt="Doctor Appointment Booking System">
 
           <div class="layer">
 
