--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="about-col-1">
 
-          <img src="shared image.jpg" alt="About Me">
+          <img src="shared image.jpeg" alt="About Me">
 
         </div>
 
