--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
       <nav>
 
-        <img src="images/veeraa.png" class="logo" alt="Veera Shankarudu Logo">
+        <img src="images/veera.png" class="logo" alt="Veera Shankarudu Logo">
 
         <ul id="sidemenu">
 
