--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
         <div class="contact-right">
 
-          <form>
+          <form name="submit-to-google-sheet">
 
             <input type="text" name="Name" placeholder="Your Name" required>
 
@@ -318,7 +318,7 @@
 </form> -->
 
 <script>
-  const scriptURL = '<SCRIPT URL>'
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbwGDMbx_N5HHkaduOxK7yRC9rMDREzmyfPOt9I2H-ZHBC8IJfHWMH1GQZw_1vcZyhw/exec'
   const form = document.forms['submit-to-google-sheet']
 
   form.addEventListener('submit', e => {
