--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@
             <button type="submit" class="btn btn2">Submit</button>
 
           </form>
+          <span id="msg">hello</span>
 
         </div>
 
