--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
             <button type="submit" class="btn btn2">Submit</button>
 
           </form>
-          <span id="msg">hello</span>
+          <span id="msg"></span>
 
         </div>
 
@@ -321,14 +321,16 @@
 <script>
   const scriptURL = 'https://script.google.com/macros/s/AKfycbwGDMbx_N5HHkaduOxK7yRC9rMDREzmyfPOt9I2H-ZHBC8IJfHWMH1GQZw_1vcZyhw/exec'
   const form = document.forms['submit-to-google-sheet']
-  const msg = document.getElementById("")
+  const msg = document.getElementById("msg")
 
   form.addEventListener('submit', e => {
     e.preventDefault()
     fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-      .then(response => { msg.innerHTML="Message Sent Successfuly"
+      .then(response => { 
+        msg.innerHTML="Message Sent Successfuly"
                         setTimeout(function(){
-                          msg.innerHTML="" },5000)
+                          msg.innerHTML="" 
+                        },5000)
                          form.reset()
                         })
       .catch(error => console.error('Error!', error.message))
