--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 
             <input type="text" name="Name" placeholder="Your Name" required>
 
-            <input type="email" name="email" placeholder="Your Email" required>
+            <input type="email" name="Email" placeholder="Your Email" required>
 
             <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
 
